--- a/y-tooltip.css
+++ b/y-tooltip.css
@@ -1,4 +1,8 @@
-/* 
+﻿/*! y-tooltip - v1.1 - 30/10/2025
+* By Yuval Ashkenazi
+* https://github.com/yuvalAshkenaz/y-tooltip
+*
+*
 * data-tooltip
 * data-tooltip-top
 * data-tooltip-left
@@ -15,7 +19,7 @@
 	top: 100%;
 	left: 50%;
 	margin: 4px 0 0 0;
-	border-bottom: 6px solid var(--color-Secondery, #8B8C90);
+	border-bottom: 6px solid #404040;
 	border-left: 6px solid transparent;
 	border-right: 6px solid transparent;
 	-webkit-transform: translate(-50%, 6px);
@@ -30,14 +34,14 @@
 }
 [data-tooltip]:not([data-tooltip=""]):not(.noUiSlider):not(.noUiSlider-single)::after {
 	content: attr(data-tooltip);
-	background: var(--color-Secondery, #8B8C90);
+	background: #404040;
 	width: max-content;
 	max-width: 176px;
 	margin: 10px 0 0 0;
 	position: absolute;
 	top: 100%;
 	left: 50%;
-	padding: 4px 8px;
+	padding: 4px 12px;
 	z-index: 2;
 	border-radius: 15px;
 	color: #fff;
@@ -45,7 +49,7 @@
 	font-family: arial;
 	font-size: 16px;
 	font-weight: 500;
-	line-height: 1.4;
+	line-height: 1.2;
 	-webkit-transform: translate(-50%, -6px);
 	transform: translate(-50%, -6px);
 	opacity: 0;
@@ -78,7 +82,7 @@
 	-webkit-transform: translate(-50%, -6px);
 	transform: translate(-50%, -6px);
 	border-bottom-color: transparent;
-	border-top: 6px solid var(--color-Secondery, #8B8C90);
+	border-top: 6px solid #404040;
 }
 [data-tooltip][data-tooltip-top]:not([data-tooltip=""]):not(.noUiSlider):not(.noUiSlider-single)::after {
 	top: auto;
